<resources>
    <string name="user_header">Name</string>
    <string name="contact_header">Kontaktdaten</string>
    <string name="firstname_title">Vorname</string>
    <string name="lastname_title">Nachname</string>
    <string name="email_title">E-Mail</string>
    <string name="phone_title">Telefon</string>
    <string name="title_welcome">Herzlich Willkommen</string>
    <string name="welcome_info">
        Klarschiff.HRO ist eine Plattform zum Melden von Problemen in der Infrastruktur der Hanse- und Universitätsstadt Rostock.\nKlarschiff.HRO will Ihnen helfen sich mit der Stadtverwaltung in Verbindung zu setzen.\nWir möchten Sie ermutigen, uns Probleme und Ideen zu Ihrem lokalen Umfeld mitzuteilen und deren Bearbeitung durch uns online zu verfolgen! Versuchen Sie doch gleich Ihre erste Meldung!
    </string>
    <string name="info_own">Oder möchten Sie die eigenen Meldung(en) ansehen\?</string>
    <string name="app_name">Open311 – Klarschiff</string>
    <string name="title_activity_main">Open311 – Klarschiff</string>
    <string name="nav_header_title">Open311 – Klarschiff</string>
    <string name="nav_header_subtitle">Meldeportal für Ihr(e) Anliegen</string>
    <string name="nav_header_desc">Logo</string>
    <string name="action_settings">Einstellungen</string>
    <string name="menu_home">Startseite</string>
    <string name="menu_issues">Meine Meldung(en)</string>
    <string name="new_issue">Neue Meldung</string>
    <string name="menu_search">Suche</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="search_info">Mit der Suchfunktion können Sie alle Meldungen, welche an die Stadt Rostock übermittelt wurden, ansehen und durchsuchen.</string>
    <string name="btn_back">Zurück</string>
    <string name="btn_next">Weiter</string>
    <string name="btn_send">Abschicken</string>
    <string name="new_issue_step1">Gruppe wählen</string>
    <string name="new_issue_step2">Kategorie wählen</string>
    <string name="new_issue_step3">Ortsangabe</string>
    <string name="new_issue_step4">Beschreibung</string>
    <string name="new_issue_step5">Foto</string>
    <string name="new_issue_step6">Kontaktdaten</string>
    <string name="new_issue_step7">Zusammenfassung</string>
    <string name="label_address">Anschrift</string>
    <string name="label_description">Bitte beschreiben Sie Ihre Meldung.</string>
    <string name="label_firstname">Vorname (optional)</string>
    <string name="label_lastname">Nachname (optional)</string>
    <string name="label_email">E-Mail-Adresse</string>
    <string name="label_phone">Telefonnummer (optional)</string>
    <string name="label_marker">Adresse festlegen</string>
    <string name="map_permissions_hint">Sie können die Karte nicht nutzen, da Sie der App die notwendigen Berechtigungen nicht erteilt haben. Nutzen Sie daher das Textfeld zur Eingabe.</string>
    <string name="map_hint">Halten Sie den Positionsmarker gedrückt, um diesen zu verschieben. Die gewählte Position wird automatisch in das Adressfeld übernommen.</string>
    <string name="error_load_groups">Service-Gruppen können nicht geladen werden.</string>
    <string name="error_load_categories">Service-Kategorien können nicht geladen werden.</string>
    <string name="error_step1">Bitte wählen Sie zuerst einen Service-Gruppe aus.</string>
    <string name="error_step2">Bitte wählen Sie zuerst einen Service-Kategorie aus.</string>
    <string name="error_step3">Bitte geben Sie zu erst eine Anschrift an.</string>
    <string name="error_step4">Bitte fügen Sie Ihrer Meldung eine Beschreibung hinzu.</string>
    <string name="error_step6">Bitte geben Sie mindestens Ihre E-Mail-Adresse an.</string>
    <string name="error_add_new_issue">"Ihre Meldung konnte aus folgendem Grund nicht übermittelt werden:"</string>
    <string name="contactdata_hint">Wenn Sie Ihre Kontaktdaten in den Einstellungen hinterlegt haben, dann werden diese hier automatisch eingefügt.</string>
    <string name="summary_hint">Folgende Daten werden übermittelt, sobald Sie die Schaltfläche "Abschicken" nutzen.</string>
    <string name="summary_service_group">Service-Gruppe:</string>
    <string name="summary_service_category">Service-Kategorie:</string>
    <string name="summary_service_address">Anschrift:</string>
    <string name="summary_service_description">Beschreibung:</string>
    <string name="summary_service_photo">Foto:</string>
    <string name="summary_service_contact">Kontaktdaten:</string>
    <string name="address_by_position">Adresse in Karte markiert.</string>
    <string name="no_photo">Kein Foto hochgeladen.</string>
    <string name="photo_hint">Über das Kamera-Symbol können Sie optional ein Foto zu Ihrer Meldung hinzufügen.</string>
    <string name="error_camera">Die Kamera kann im Moment nicht verwendet werden.</string>
    <string name="error_network">Sie haben keine Verbindung zum Internet. Die App kann deshalb nicht im vollen Umfang genutzt werden.</string>
    <string name="label_status">Status:</string>
    <string name="status_pending">offen</string>
    <string name="status_reviewed">überprüft</string>
    <string name="status_in_process">in Bearbeitung</string>
    <string name="status_received">eingegangen</string>
    <string name="status_rejected">abgelehnt</string>
    <string name="status_processed">erledigt</string>
    <string name="status_closed">geschlossen</string>
    <string name="search_count">Treffer gefunden</string>
    <string name="label_search">Suche</string>
    <string name="sort_category_asc">Kategorie aufsteigend</string>
    <string name="sort_category_desc">Kategorie absteigend</string>
    <string name="sort_status_asc">Status aufsteigend</string>
    <string name="sort_status_desc">Status absteigend</string>
    <string name="menu_detail">Details</string>
    <string name="error_detail">Fehler beim Laden der Detailansicht</string>
    <string name="label_requesttime">Erstellt am:</string>
    <string name="label_updatedtime">Letzte Aktualisierung:</string>
    <string name="label_agency">Zuständiges Amt:</string>
    <string name="title_search">Meldungen durchsuchen</string>
    <string name="error_add_new_issue_database">Die Meldung konnte übermittelt werden, wir können es in der App aber nicht unter \"Meine Meldung(en)\" auflisten.</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBE_ylFSvRqIaeQZTHz4UmwgerxZ54DmfY</string>
    <string name="open311_api_key" templateMergeStrategy="preserve" translatable="false">jc4hWFIIeTDMvTrAh9jvcrKLWGbgyoYT</string>
</resources>