<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_header">
        <EditTextPreference
            app:key="firstname"
            app:title="@string/firstname_title"
            app:useSimpleSummaryProvider="true"></EditTextPreference>

        <EditTextPreference
            app:key="lastname"
            app:title="@string/lastname_title"
            app:useSimpleSummaryProvider="true"></EditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/contact_header">
        <EditTextPreference
            android:inputType="textEmailAddress"
            app:key="email"
            app:title="@string/email_title"
            app:useSimpleSummaryProvider="true"></EditTextPreference>

        <EditTextPreference
            android:inputType="phone"
            app:key="phone"
            app:title="@string/phone_title"
            app:useSimpleSummaryProvider="true"></EditTextPreference>
    </PreferenceCategory>

</PreferenceScreen>