<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iu.open311_klarschiff.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"></fragment>

    <fragment
        android:id="@+id/nav_issues"
        android:name="com.iu.open311_klarschiff.IssuesFragment"
        android:label="@string/menu_issues"
        tools:layout="@layout/fragment_issues"></fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.iu.open311_klarschiff.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search"></fragment>

    <fragment
        android:id="@+id/nav_details"
        android:name="com.iu.open311_klarschiff.DetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_detail"></fragment>
</navigation>