<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/textWelcome"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/title_welcome"
                android:textColor="@color/primary"></TextView>

            <TextView
                android:id="@+id/textUsername"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:textColor="@color/secondary"></TextView>

            <TextView
                android:id="@+id/textWelcomeInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:text="@string/welcome_info"
                android:textColor="@color/black"></TextView>

            <Button
                android:id="@+id/btn_new_issue"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:gravity="left"
                android:text="@string/new_issue"></Button>


            <TextView
                android:id="@+id/textInfoOwn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/info_own"
                android:textColor="@color/black"></TextView>

            <Button
                android:id="@+id/btnIssues"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:gravity="left"
                android:text="@string/menu_issues"></Button>

            <TextView
                android:id="@+id/textSearchInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/search_info"
                android:textColor="@color/black"></TextView>


            <Button
                android:id="@+id/btnSearch"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@color/primary"
                android:gravity="left"
                android:text="@string/menu_search"></Button>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>