<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Step7Fragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/summary_hint"
                android:textColor="@color/black" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingBottom="16dp"
                        android:text="@string/summary_service_group"
                        android:textColor="@color/black"></TextView>

                    <TextView
                        android:id="@+id/summaryGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:textColor="@color/black"></TextView>
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/summary_service_category"
                        android:textColor="@color/black"></TextView>

                    <TextView
                        android:id="@+id/summaryCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:textColor="@color/black"></TextView>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/summary_service_address"
                        android:textColor="@color/black"></TextView>

                    <TextView
                        android:id="@+id/summaryAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:textColor="@color/black"></TextView>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/summary_service_description"
                        android:textColor="@color/black"></TextView>

                    <TextView
                        android:id="@+id/summaryDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:textColor="@color/black"></TextView>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/summary_service_photo"
                        android:textColor="@color/black"></TextView>

                    <TextView
                        android:id="@+id/summaryPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:textColor="@color/black"></TextView>

                    <ImageView
                        android:id="@+id/imagePreview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:visibility="gone"></ImageView>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/summary_service_contact"
                        android:textColor="@color/black"></TextView>

                    <TextView
                        android:id="@+id/summaryContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:textColor="@color/black"></TextView>
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>